--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ python-dotenv = "*"
 mysql-connector-python = "*"
 flask-cors = "*"
 gunicorn = "*"
+flask-jwt-extended = "*"
 
 [requires]
 python_version = "3.6"
