--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ flask-cors = "*"
 gunicorn = "*"
 flask-jwt-simple = "*"
 flask-jwt-extended = "*"
+mysqlclient = "*"
 
 [requires]
 python_version = "3.6"
