testing mysqldb bug fix

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ gunicorn = "*"
 flask-jwt-simple = "*"
 flask-jwt-extended = "*"
 mysqlclient = "*"
+twilio = "*"
 
 [requires]
 python_version = "3.6"
