--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 DB_CONNECTION_STRING=mysql+mysqlconnector://root@localhost/example
 FLASK_APP=src/main.py
 FLASK_ENV=development
+ACCOUNTSID=
+TWILIOTOKEN=
+
+// GET THE KEYS LIKE THIS.
+
+account_sid = os.environ.get('ACCOUNTSID')
+auth_token = os.environ.get('TWILIOTOKEN')
